--- a/template.yaml
+++ b/template.yaml
@@ -14,9 +14,9 @@ Resources:
   RegisterTokenFuncion:
     Type: AWS::Serverless::Function
     Properties:      
-      CodeUri: registerToken/
+      CodeUri: hello_world/
       Handler: app.lambdaHandler
-      Runtime: nodejs14.x-v1
+      Runtime: nodejs14
       Events:
         RegisterToken:
           Type: Api
